apply from: '../versions.gradle'
apply plugin: 'com.android.library'

android {
    compileSdkVersion 27
    buildToolsVersion '27.0.3'
    defaultConfig {
        minSdkVersion 14
        targetSdkVersion 27
        versionCode 1
        versionName '0.0.1'
        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
    }

    buildTypes {
        release {
            minifyEnabled false
            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
        }
    }

    compileOptions {
        sourceCompatibility JavaVersion.VERSION_1_8
        targetCompatibility JavaVersion.VERSION_1_8
    }
}

dependencies {
    androidTestImplementation "com.annimon:stream:${libraryVersion.stream}"
    androidTestImplementation "com.android.support.test:runner:${libraryVersion.testRunner}"
    androidTestImplementation "com.android.support.test.espresso:espresso-core:${libraryVersion.espresso}"

    implementation "com.android.support:recyclerview-v7:${libraryVersion.androidSupport}"

    testImplementation "junit:junit:${libraryVersion.junit}"
}
